Added recipe template file
Added recipe_template.html for easy recipe creation

--- a/recipes/pumpkinSpice.html
+++ b/recipes/pumpkinSpice.html
@@ -2,35 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>Pumpkin Spice Latte</title>
   </head>
   <body>
     <h1>Pumpkin Spice Latte</h1>
     <img src="../media/PumpkinSpiceLatte.jpg" alt="Pumpkin Spice Latte" />
     <h2>Description</h2>
     <p>
-      Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-      labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet.
-      Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum
-      Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident.
-      Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex
-      occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat
-      officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in
-      Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non
-      excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco
-      ut ea consectetur et est culpa et culpa duis.
+      Make the popular coffee house pumpkin spice latte at home. Canned or
+      homemade pumpkin puree both work well in this recipe.
     </p>
     <p>
-      Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim
-      labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet.
-      Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum
-      Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident.
-      Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex
-      occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat
-      officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in
-      Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non
-      excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco
-      ut ea consectetur et est culpa et culpa duis.
+      The moment Fall hits, we rush to our local coffee shop and order a pumpkin
+      spice latte. We love them so much, we took it upon ourselves to try making
+      it at home. This recipe is easy and I bet you have most, if not
+      everything, you need to make it at home right now. It also comes together
+      in under 10 minutes!
     </p>
     <h2>Ingredients</h2>
     <ul>
