Added more recipes
Added a recipe for pumpkin puree

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <li>
         <a href="./recipes/pumpkinSpice.html">Pumpkin Spice Latte</a>
       </li>
+      <li>
+        <a href="./recipes/pumpkin-puree.html">Pumpkin Puree</a>
+      </li>
     </ul>
   </body>
 </html>
