Added more recipes
Added a recipe for chocolate fudge and fixed a typo in pumpkin-puree.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href="./recipes/pumpkin-puree.html">Pumpkin Puree</a>
       </li>
+      <li>
+        <a href="./recipes/chocolate-fudge.html">Chocolate Fudge</a>
+      </li>
     </ul>
   </body>
 </html>
