--- a/recipes/pumpkin-puree.html
+++ b/recipes/pumpkin-puree.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Recipe Template</title>
+    <title>Pumpkin Puree</title>
   </head>
   <body>
-    <h1>Recipe name</h1>
+    <h1>Pumpkin Puree</h1>
 
     <!-- Showcase what you'll be making -->
     <img src="../media/PumpkinPuree.jpg" alt="Pumpkin Puree" />
